# -bsuir

./: .gitignore  README.md
ACG/Epicycloid/: CMakeLists.txt  main.cpp
ACG/lab2/: CMakeLists.txt  main.cpp
ACG/lab3/: CMakeLists.txt  main.cpp
ACG/lab3/src/: Animation.cpp  Animation.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  ZBuffer.cpp  ZBuffer.h
ACG/lab4/: CMakeLists.txt  main.cpp
ACG/lab4/src/buffer/: Buffer.cpp  Buffer.h
ACG/lab4/src/plane/: Line.cpp  Line.h  Plane.cpp  Plane.h
ACG/lab4/src/point/: Point.cpp  Point.h
ACG/lab6/: CMakeLists.txt  main.cpp
COS/lab2/: main.py  util.py
COS/lab3/: main.py  util.py
COS/lab4/: main.py  util.py
DB/1/: Task1.sql  Task2.sql
DB/2/: Task1.sql  Task2.sql
POVS/lab1/: lab1.asm
POVS/lab2/: lab2.asm  lab2_2.asm
POVS/lab3/: lab3.asm
POVS/lab4/: lab4.asm
POVS/lab5/: lab5.asm
POVS/lab6/: lab6.asm
SAaMMod/4lab/: elements.py  main.py
SAaMMod/lab6/: elements.py  main.py
SAaMMod/number-generator-with-distribution/: generator.py
SAaMMod/random-number-generator/: main.py
number-generator-with-distribution/: main.py
signals-modeling/: harmonic.py  polyharmonic.py
